# bevy_post_process_2_input_image

./: Cargo.toml
assets/shaders/: post_processing.wgsl  show_prepass.wgsl
src/: main.rs  post_process.rs
